<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_item"
            android:title="@string/nav_home_item"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/nav_cats_item"
            android:title="@string/nav_cats_item"
            android:icon="@drawable/ic_cats"/>

        <item
            android:id="@+id/nav_all_aus_item"
            android:title="@string/nav_all_aus_item"
            android:icon="@drawable/ic_aus"/>
        <item
            android:id="@+id/nav_general_info_item"
            android:title="@string/nav_general_info"
            android:icon="@drawable/ic_info"/>
    </group>

    <item android:title="@string/nav_communicate_item">
        <menu>
            <item
                android:id="@+id/nav_share_item"
                android:title="@string/nav_share_item"
                android:icon="@drawable/ic_share"/>
            <item
                android:id="@+id/nav_rate_item"
                android:title="@string/nav_rate_item"
                android:icon="@drawable/ic_rate"/>
            <item
                android:id="@+id/nav_about_item"
                android:title="@string/nav_about_item"
                android:icon="@drawable/ic_about"/>
        </menu>

    </item>

</menu>